--- a/style.css
+++ b/style.css
@@ -42,12 +42,17 @@ body {
   background-color: var(--white-color);
   color: var(--font-color);
   margin: 0 auto;
+  position: relative;
 }
 
 .container {
   max-width: 1240px;
   min-width: 350px;
   padding: 0 20px;
+}
+
+h1 {
+  font-size: 18px;
 }
 
 header {
@@ -80,7 +85,7 @@ header {
 header nav {
   position: absolute;
   right: -100%;
-  top: 1em;
+  top: 0em;
   width: 100%;
   height: calc(100vh);
   display: -webkit-box;
@@ -94,7 +99,7 @@ header nav {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  margin-top: 6rem;
+  margin-top: 5rem;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
@@ -102,7 +107,7 @@ header nav {
   z-index: 999;
   -webkit-transition: right linear 0.5s;
   transition: right linear 0.5s;
-  padding: 0 40px;
+  padding: 30px 40px 0;
 }
 
 header nav li {
@@ -225,8 +230,8 @@ main {
 #home .home__image img {
   -o-object-fit: cover;
      object-fit: cover;
-  -o-object-position: left;
-     object-position: left;
+  -o-object-position: center left;
+     object-position: center left;
   width: 100%;
   height: 100%;
   border-radius: 30px;
@@ -243,6 +248,7 @@ main {
 #home .text h1 {
   margin-bottom: 10px;
   margin-top: 1.5em;
+  font-size: 2rem;
 }
 
 #home .text p {
@@ -289,7 +295,7 @@ main {
 }
 
 #about p {
-  font-size: 1.2em;
+  font-size: 1em;
   text-align: justify;
   margin: 1.5rem 0;
 }
@@ -403,7 +409,7 @@ main {
   -ms-grid-columns: minmax(200px, 100%);
       grid-template-columns: minmax(200px, 100%);
   justify-items: center;
-  gap: 20px;
+  gap: 30px;
 }
 
 #menu .menu-image {
@@ -418,8 +424,8 @@ main {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  border: 1px solid #e6e4e4;
-  height: 350px;
+  border: 1px solid rgba(0, 0, 0, 0.11);
+  height: 300px;
   overflow: hidden;
 }
 
@@ -433,13 +439,13 @@ main {
 #menu .menu-image h4 {
   padding: 1em 0 .5em;
   color: var(--style-color);
-  font-size: 1.2em;
+  font-size: 1em;
   font-weight: bold;
 }
 
 #menu .menu-image h5 {
   margin-bottom: 1em;
-  font-size: 1.3em;
+  font-size: 1em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -454,7 +460,7 @@ main {
 }
 
 #menu .menu-image h5 .add-icon {
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 900;
 }
 
@@ -483,7 +489,7 @@ main {
   background-color: var(--white-color);
   color: var(--font-color);
   min-height: 100vh;
-  top: 6rem;
+  top: 5rem;
   width: 100%;
   right: -100%;
   padding: 0 30px;
@@ -494,6 +500,8 @@ main {
 
 .cartDetail h1 {
   padding: 1em 0 .5em;
+  text-align: center;
+  font-size: 1.3em;
 }
 
 .cartDetail .shopping-container {
@@ -598,7 +606,7 @@ main {
 }
 
 .cartDetail .summation {
-  border-top: 1px solid #e6e4e4;
+  border-top: 1px solid rgba(0, 0, 0, 0.11);
   margin-top: 3em;
   width: 100%;
 }
@@ -611,7 +619,7 @@ main {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  font-size: 1.6em;
+  font-size: 1.2em;
 }
 
 .showCart {
@@ -619,7 +627,7 @@ main {
 }
 
 #contact {
-  font-size: 16px;
+  font-size: 12px;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -637,6 +645,10 @@ main {
   padding: 1em 0 .5em;
 }
 
+#contact .contactContainer {
+  width: 100%;
+}
+
 #contact .info-wrap {
   border-radius: 5px;
   width: 100%;
@@ -647,9 +659,9 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   margin-top: 1em;
 }
 
@@ -686,15 +698,15 @@ main {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  padding: 1em .5em  1.3em;
-  font-size: 1.1em;
+  padding: 1em  0 1.3em;
+  font-size: 16px;
   text-align: left;
 }
 
 #contact li .bx {
   margin-right: 1em;
   color: var(--style-color);
-  font-size: 1.5em;
+  font-size: 16px;
 }
 
 .contactForm {
@@ -711,7 +723,7 @@ form {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100%;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 form > div {
@@ -724,7 +736,7 @@ form > div input {
   padding: 10px 0;
   margin-top: 10px;
   border: none;
-  border-bottom: #e9e9e9 1px solid;
+  border-bottom: rgba(0, 0, 0, 0.11) 1px solid;
   width: 100%;
   outline: none;
 }
@@ -732,7 +744,7 @@ form > div input {
 form > div textarea {
   margin-top: 10px;
   border: none;
-  border-bottom: #e9e9e9 1px solid;
+  border-bottom: rgba(0, 0, 0, 0.11) 1px solid;
   width: 100%;
   outline: none;
 }
@@ -759,7 +771,7 @@ form button:hover {
 
 footer {
   font-size: 1.1em;
-  border-top: #e9e9e9 1px solid;
+  border-top: rgba(0, 0, 0, 0.11) 1px solid;
   margin-top: 1em;
   width: 100%;
   padding: 1em 2em;
@@ -794,37 +806,34 @@ footer span {
   color: var(--style-color);
 }
 
-@media screen and (min-width: 400px) {
-  .home__image {
-    height: 250px;
-    width: 80%;
+@media screen and (min-width: 650px) {
+  #home {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  #home .text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 50px;
   }
   #home .text button {
-    padding: 1em 1.4em;
-    font-weight: 800;
-  }
-  #about {
-    min-height: 70vh;
-  }
-  #about .body {
-    min-height: 50vh;
-  }
-  #reservation .shopping-container {
-    font-size: 12px;
-  }
-  #contact .info-wrap {
-    font-size: 1.3em;
-  }
-  footer img {
-    font-size: 14px;
-    width: 200px;
-  }
-}
-
-@media screen and (min-width: 600px) {
-  #home .home__image {
-    height: 300px;
-    width: 85%;
+    margin-top: 20px;
+    font-size: .8rem;
   }
   #about {
     min-height: 80vh;
@@ -835,7 +844,6 @@ footer span {
   #menu .image-grid {
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
-    grid-column-gap: 1em;
   }
   #reservation .shopping-container {
     font-size: 14px;
@@ -843,45 +851,27 @@ footer span {
   #reservation .shopping-container button {
     font-size: 12px;
   }
-  #reservation .img-shopping {
-    width: 8em;
+  .contactContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin-top: 20px;
   }
-  #reservation .input {
-    margin-left: -8em;
+  .contactContainer .info-wrap .contact-info ul {
+    margin-top: 0 !important;
   }
-  #reservation input {
-    width: 2em;
-    font-size: 1.5em;
+  .contactContainer .info-wrap .contact-info ul li {
+    padding-top: 0 !important;
+    padding-bottom: 38px !important;
   }
-  #reservation .summation {
-    font-size: .8em;
+  .contactForm button {
+    width: 120px;
   }
-  #contact .contact-info {
-    -ms-flex-item-align: start;
-        align-self: flex-start;
-    padding-left: 2em;
-  }
-}
-
-@media screen and (min-width: 750px) {
-  #home {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-  #home .text {
-    font-size: 1.3em;
-    width: 45%;
-    height: 250px;
-  }
-  #home .home__image {
-    width: 10%;
-    height: 250px;
-    border-radius: 30px;
+  footer > img {
+    width: 200px;
   }
 }
 
@@ -897,58 +887,67 @@ footer span {
     position: relative;
     right: 0;
     top: 0;
-    background-color: var(--whitecolor);
-    width: 80%;
-    height: 5em;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  header nav {
-    height: 100%;
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    margin: 0;
+    height: 100%;
+    width: 100%;
+  }
+  header nav {
+    padding: 0;
   }
   header nav li {
     -webkit-transition: 0.5s border;
     transition: 0.5s border;
     padding: 0;
-    border-radius: 10px;
-    margin-left: 1em;
-    padding: 0.5em 1.5em;
-    margin-left: 5em;
-    font-size: .8em;
+    padding: 0em 0 5px;
+    margin: 0 30px 0;
   }
-  header nav .active, header nav li:hover {
-    border: var(--style-color) solid 2px;
-  }
-  header nav a {
-    font-size: 1em;
-    font-weight: 700;
-    letter-spacing: .2em;
+  header nav .active {
+    border: none;
+    border-bottom: var(--style-color) solid 1px;
   }
   #home {
-    padding: 0 3em;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 0 20rem;
+    height: 100vh;
   }
-  #home .home__image {
-    min-width: 35%;
-    height: 300px;
-    border-radius: 30px;
+  #home .text > h1 {
+    font-size: 3em;
+  }
+  #home .text > p {
+    word-spacing: 20px;
+  }
+  #about {
+    min-height: 100vh;
+  }
+  #about p {
+    font-size: 1rem;
+    margin-top: 20px;
+  }
+  #about .about__image {
+    position: relative;
+    height: 12em;
+    width: 14em;
+  }
+  #about .body {
+    min-height: 80vh;
+  }
+  #contact {
+    min-height: 100vh;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   #reservation .text h3 {
     display: -webkit-box;
@@ -975,32 +974,19 @@ footer span {
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1440px) {
+  #home .home__image {
+    height: 500px;
+    width: 500px;
+  }
   #menu .image-grid {
     -ms-grid-columns: 1fr 1fr 1fr 1fr;
         grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin-top: 40px;
   }
-  #about .about__image {
-    position: relative;
-    height: 12em;
-    width: 14em;
-  }
-  #about {
-    min-height: 100vh;
-  }
-  #about .body {
-    min-height: 80vh;
-  }
-}
-
-@media screen and (min-width: 1800px) {
-  body {
-    font-size: 18px;
-  }
-  #home {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+  #about p {
+    font-size: 1.1rem;
+    margin-top: 40px;
   }
 }
 /*# sourceMappingURL=style.css.map */
