--- a/style.css
+++ b/style.css
@@ -806,6 +806,12 @@ footer span {
   color: var(--style-color);
 }
 
+.anchor {
+  display: block;
+  padding-top: 6rem;
+  margin-top: -6rem;
+}
+
 @media screen and (min-width: 650px) {
   #home {
     -webkit-box-orient: horizontal;
