--- a/style.scss
+++ b/style.scss
@@ -677,6 +677,12 @@ footer{
     }
 }
 
+.anchor{
+    display: block;
+    padding-top: 6rem;
+    margin-top: -6rem;
+}
+
 
 @media screen and (min-width:650px){
    #home{
